# dsmtool

./: .gitignore  Cargo.toml  README.md  out.csv
examples/: dsmweb.csv  generate_dsm.sh  simple.csv  sparse_dsm_100x100_sparsity_0.2.csv
scripts/: generate_dsms.sh
src/: clustering.rs  dsm.rs  io.rs  main.rs
tests/: integration.rs  simple.csv
