[package]
name = "dsmtool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
ndarray = "0.16.1"
csv = "1.3.0"
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.2"
